--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
     <script>
         // Configuration - Replace with your actual links
         const offers = [
-            { display: "prmpharmaceuticals.com/offer", actual: "https://forms.gle/F7gkVjxh6Q2xQaru6" },
-            { display: "prmpharmaceuticals.com/offer", actual: "https://forms.gle/n8L6iEMwSPk3WoQV6" },
-            { display: "prmpharmaceuticals.com/offer", actual: "https://forms.gle/m8kQ2rEaoUE3i36t8" }
+            { display: "https://forms.gle/F7gkVjxh6Q2xQaru6", actual: "https://forms.gle/F7gkVjxh6Q2xQaru6" },
+            { display: "https://forms.gle/n8L6iEMwSPk3WoQV6", actual: "https://forms.gle/n8L6iEMwSPk3WoQV6" },
+            { display: "https://forms.gle/m8kQ2rEaoUE3i36t8", actual: "https://forms.gle/m8kQ2rEaoUE3i36t8" }
         ];
         
         // Generate QR with masked URL
@@ -130,3 +130,4 @@
     </script>
 </body>
 </html>
+
